css/index.css
.profile {
    display: block;
    margin: auto;
    max-width: 16em;
    padding-bottom: 5px;
}
.marketing-icon {
    font-size: 4em;
}

.page-content p {
    font-size: 20px;
}

.page-content li {
    font-size: 16px;
}

